--- a/views/home.html
+++ b/views/home.html
@@ -5,119 +5,78 @@
   <title>Marvel</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../assets/icons/font-awesome/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="../css/ed-grid.min.css">
   <link href="https://fonts.googleapis.com/css?family=Anton|Risque|Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="../css/principal.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
 </head>
 
 <body>
-  
-    <nav class="navbar navbar-default" role="navigation" id="navbar">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Desplegar navegación</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="home.html">
-            <b>NeoxCinema</b>
-          </a>
-        </div>
-    
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul id="menu-principal" class="nav navbar-nav">
-            <li>
-              <a href="cines.html">Cines cerca</a>
-              <span id="hola"></span>
-            </li>
-    
-            <div class="navbar-form navbar-left" role="search">
-              <div class="form-group">
-                <input type="text" id="titleFld" class="form-control" placeholder="Buscar">
-              </div>
-              <button type="submit" id="searchBtn" class="btn btn-default">
-                <span class="glyphicon glyphicon-search"></span>BUSCAR</button>
-            </div>
-          </ul>
-    
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img id="userphoto" width="50px">
-                </span>
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="we" href="#">Quienes somos
-                    <span class="glyphicon glyphicon-home"></span>
-                  </a>
-                </li>
-                <li>
-                  <a class="" href="perfil.html">Perfil
-                    <span class="glyphicon glyphicon-user">
-                  </a>
-                </li>
-                <li>
-                  <a href="perfil.html">Favoritos
-                    <span class="glyphicon glyphicon-star">
-                  </a>
-                </li>
-                <li class="divider"></li>
-                <li>
-                  <a class="sign-off" id="logout" href="#">Salir</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="home.html">
+        <b>NEOXCINEMA</b>
+      </a>
 
-  <!--section slider de peliculas-->
-
-  <div class="container-fluid col-xs-10 col-md-7 col-xs-offset-2">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-
-      <div class="carousel-inner ">
-        <div class="item active">
-          <img src="../assets/images/one.jpg" alt="" style="width:100%;">
+      <div class="navbar-form col-lg-4 offset-lg-2 col-sm-5 col-xs-4" role="search">
+        <div class="form-group">
+          <input type="text" id="titleFld" class="form-control" placeholder="Buscar">
         </div>
 
-        <div class="item">
-          <img src="../assets/images/newpan.jpg" alt="" style="width:100%;">
-        </div>
-
-        <div class="item">
-          <img src="../assets/images/three.jpg" alt="" style="width:100%,height:80%;">
-        </div>
       </div>
+      <button type="submit" id="searchBtn" class="btn btn-default">
+        <span class="glyphicon glyphicon-search"></span>BUSCAR</button>
 
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
+
+
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse col-2 offset-2 " id="navbarResponsive">
+
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <img id="userphoto" width="50px">
+              </span>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="we" href="#">Quienes somos
+                  <span class="glyphicon glyphicon-home"></span>
+                </a>
+              </li>
+              <li>
+                <a class="" href="perfil.html">Perfil
+                  <span class="glyphicon glyphicon-user">
+                </a>
+              </li>
+              <li>
+                <a href="perfil.html">Favoritos
+                  <span class="glyphicon glyphicon-star">
+                </a>
+              </li>
+              <li class="divider"></li>
+              <li>
+                <a class="sign-off" id="logout" href="#">Salir</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
+  </nav>
 
-  <!--menu-->
+
   <div class="container-fluid" id="menu">
     <div class="row">
-      <div class=" col-xs-12  col-sm-4 col-md-3 information ">
-        <h3>NeoxCinema</h3>
+      <div class="col-lg-3 information">
         <ul class="information_menu">
           <li class="active" data-id="1" id="personaje">
             <a>
@@ -127,7 +86,7 @@
             <a>
               <span class="glyphicon glyphicon-ok-sign"></span> COMICS</a>
           </li>
-     
+
           <li data-id="4" id="creators">
             <a>
               <span class="glyphicon glyphicon-ok-sign"></span> CREADORES</a>
@@ -145,17 +104,59 @@
               <span class="glyphicon glyphicon-ok-sign"></span> HISTORIETAS</a>
           </li>
         </ul>
+
       </div>
+      <!-- /.col-lg-3 -->
 
-      <iframe class="col-xs-12  col-sm-8 col-md-8 " width="900" height="520" src="https://www.youtube.com/embed/JcIye2DaZwI?ecver=1"
-        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <div class="col-lg-8">
 
+        <div id="carouselExampleIndicators" class="carousel slideshow" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../assets/images/one.jpg" alt="" style="width:100%;">
+            </div>
+            <div class="carousel-item">
+
+              <img src="../assets/images/newpan.jpg" alt="" style="width:100%;">
+            </div>
+            <div class="carousel-item">
+              <img src="../assets/images/three.jpg" alt="" style="width:100%">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+        <section id="recommended">
+          <div class="container">
+            <div class="col-md-12 hidden-xs">
+              <h1 class="d-flex  align-items-center justify-content-center"> Te Recomendamos</h1>
+              <div class="row">
+                <div class="portfolio-items_one display col-md-12 container-fluid">
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+
+        <!-- aqui se muestra las fotos  -->
+        <div id="content" class="ed-container">
+
+        </div>
+      </div>
     </div>
-  </div>
-
-  <!-- aqui se muestra las fotos  -->
-  <div id="content" class="ed-container">
-
   </div>
 
 
@@ -240,10 +241,16 @@
   </footer>
 
 
-  <script src="../vendors/jquery/jquery-3.2.1.min.js"></script>
+
+
   <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
   <script src="../js/helpers/config_firebase.js"></script>
   <script src="../js/helpers/functions.js"></script>
   <script src="../js/main.js"></script>
