--- a/css/principal.css
+++ b/css/principal.css
@@ -2,7 +2,8 @@
 body{
   background-color: rgb(213, 223, 228) !important;
 }
-  .main-container{
+
+.main-container{
   background: #d53369;
   background: -webkit-linear-gradient(to left, #d53369 , #cbad6d);
   background: linear-gradient(to left, #d53369 , #cbad6d);
@@ -13,78 +14,152 @@ body{
   background: rgba(0, 0, 0, 0.26);
   border-radius: 10px;
   padding: 3%;
+
 }
 
-.modal_movies img {
-  float: left;
-  width: 100px;
-  height: 100px;
-  margin: 10px;
-}
+  .modal_movies img {
+      float: left;
+      width: 100px;
+      height: 100px;
+      margin: 10px;
+      }
 
-.modal_movies ul {
-  list-style-image: url('http://icons.iconarchive.com/icons/yusuke-kamiyamane/fugue/16/tick-small-icon.png');
-  margin-left: 1%;
-  float: left;
-  clear: right
-}
+  .modal_movies ul {
+      list-style-image: url('http://icons.iconarchive.com/icons/yusuke-kamiyamane/fugue/16/tick-small-icon.png');
+      margin-left: 1%;
+      float: left;
+      clear: right
+      }
 
-.modal_movies button {
-  margin-left: 1%;
-  float: right;
-}
+  .modal_movies button {
+     margin-left: 1%;
+      float: right;
+      }
 
-.modal_movies h1,h2,h3,h4,h5,h6 {
-  padding-bottom: 2%;
-  border-bottom: 2px dashed rgba(255, 255, 255, 0.41);
-  font-size:20px;
-  text-align : center;
-  text-transform: uppercase;
-}
+  .modal_movies h1,h2,h3,h4,h5,h6 {
+      padding-bottom: 2%;
+      border-bottom: 2px dashed rgba(255, 255, 255, 0.41);
+      font-size:20px;
+      text-align : center;
+      text-transform: uppercase;
+      }
 
-.modal_movies p {
-  text-align: justify;
-}
+  .modal_movies p {
+      text-align: justify;
+      }
 
+  /* estilos de menu*/
 
-.slideshow {
-  overflow: hidden;
-  width: 105%;
-}
+    .information {
+       /* outline: 1px solid red; */
+        background: #2a3d46;
+        position: relative;
+        height: 500px;
+        margin-left: 12px;
+    }
+    .information h3 {
+        font-size: 34px;
+        font-size: 3.4rem;
+        font-family: "roboto", sans-serif;
+        font-weight: 500;
+        color: #FFF;
+        padding: 0 15px;
+    }
+    .information .information_menu {
+        padding: 0;
+    }
+    .information .information_menu li {
+        list-style: none;
+        position: relative;
+    }
 
+    .information .information_menu li a {
+        color: #FFF;
+        display: block;
+        padding: 16px 20px;
+        font-size: 15px;
+        font-size: 1.5rem;
+        text-decoration: none;
+    }
+
+    .information .information_menu li a:hover{
+      background-color: red;
+      cursor: pointer;
+    }
+
+    .slideshow {
+      overflow: hidden;
+      width: 105%;
+    }
+
+    #menu{
+      margin-top: 20px;
+    }
+
+    #menu-principal  li a:hover{
+      background:#FF0000;
+      border: white;
+      color: #FFFFFF;
+      font-size: 15px;
+     }
+
+  .navbar-header a b{
+    background-color:#FF0000;
+    padding: 12%;
+    color:#FFFFFF;
+    font-size: 15px;
+  }
+  .dropdown{
+    font-size: 25px;
+   margin-left: -2;
+  }
+
+  .dropdown-menu li a:hover {
+    background:#FF0000;
+  }
+
+  #navbar{
+    background:#000000;
+  }
+
+    /*estilo del div que muestra imagenes*/
 
 .main-title {
-  text-align: center;
+    text-align: center;
 }
 
 .hero-img {
-  position: relative;
-  overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 
 .hero-img:hover .description {
-  top: 0;
+   top: 0;
 
 }
 .imgHover {
-  display: block;
-  width: 100%;
+    display: block;
+    width: 100%;
 
 }
 
 .description {
-  display: flex;
-  align-items: center;
-  color: white;
-  background: #333;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: -100%;
-  margin: 0;
-  padding: 1em;
+    display: flex;
+    align-items: center;
+    color: white;
+    background: #333;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: -100%;
+    margin: 0;
+    padding: 1em;
 
 }
+iframe{
+
+}
+
 
 
 /*footer*/
@@ -107,7 +182,8 @@ body{
   border-color: smoke;
   border-radius: 50%;
   display:inline-block;
-  
+  /* outline: 1px solid yellow; */
+  float: left;
 }
 
 .bg-circle-outline a span{
@@ -138,6 +214,10 @@ footer{
   margin-left: 25%;
 
 }
+
+/* #content{
+  color: white;
+} */
 
 
 /* Mapa */
@@ -221,7 +301,7 @@ img.kami, img.jenny, img.jymma, img.flora{
 .center-all{
   margin-right: 20px;
 }
-
+=======
 
 /* Perfil */
 
@@ -264,9 +344,3 @@ span.movietitle{
 .box-movie{
   margin-bottom: 40px;
 }
-
-
-.main-title {
-  text-align: center;
-}
-
