--- a/views/home.html
+++ b/views/home.html
@@ -15,104 +15,73 @@
 </head>
 
 <body>
-  
-    <nav class="navbar navbar-default" role="navigation" id="navbar">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Desplegar navegación</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="home.html">
-            <b>NeoxCinema</b>
-          </a>
+
+  <nav class="navbar navbar-default" role="navigation" id="navbar">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+        <span class="sr-only">Desplegar navegación</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="home.html">
+        <b>NeoxCinema</b>
+      </a>
+    </div>
+
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <ul id="menu-principal" class="nav navbar-nav">
+
+        <div class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" id="titleFld" class="form-control" placeholder="Buscar">
+          </div>
+          <button type="submit" id="searchBtn" class="btn btn-default">
+            <span class="glyphicon glyphicon-search"></span>BUSCAR</button>
         </div>
-    
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul id="menu-principal" class="nav navbar-nav">
-         
-            <div class="navbar-form navbar-left" role="search">
-              <div class="form-group">
-                <input type="text" id="titleFld" class="form-control" placeholder="Buscar">
-              </div>
-              <button type="submit" id="searchBtn" class="btn btn-default">
-                <span class="glyphicon glyphicon-search"></span>BUSCAR</button>
-            </div>
-          </ul>
-    
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img id="userphoto" width="50px">
-                </span>
-                <b class="caret"></b>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <img id="userphoto" width="50px">
+            </span>
+            <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="we" href="#">Quienes somos
+                <span class="glyphicon glyphicon-home"></span>
               </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="we" href="#">Quienes somos
-                    <span class="glyphicon glyphicon-home"></span>
-                  </a>
-                </li>
-                <li>
-                  <a class="" href="perfil.html">Perfil
-                    <span class="glyphicon glyphicon-user">
-                  </a>
-                </li>
-                <li>
-                  <a href="perfil.html">Favoritos
-                    <span class="glyphicon glyphicon-star">
-                  </a>
-                </li>
-                <li class="divider"></li>
-                <li>
-                  <a class="sign-off" id="logout" href="#">Salir</a>
-                </li>
-              </ul>
+            </li>
+            <li>
+              <a class="" href="perfil.html">Perfil
+                <span class="glyphicon glyphicon-user">
+              </a>
+            </li>
+            <li>
+              <a href="perfil.html">Favoritos
+                <span class="glyphicon glyphicon-star">
+              </a>
+            </li>
+            <li class="divider"></li>
+            <li>
+              <a class="sign-off" id="logout" href="#">Salir</a>
             </li>
           </ul>
-        </div>
-      </nav>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <!--section slider de peliculas-->
 
-  <div class="container-fluid col-xs-10 col-md-7 col-xs-offset-2">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
 
-      <div class="carousel-inner ">
-        <div class="item active">
-          <img src="../assets/images/one.jpg" alt="" style="width:100%;">
-        </div>
-
-        <div class="item">
-          <img src="../assets/images/newpan.jpg" alt="" style="width:100%;">
-        </div>
-
-        <div class="item">
-          <img src="../assets/images/three.jpg" alt="" style="width:100%,height:80%;">
-        </div>
-      </div>
-
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
 
   <!--menu-->
   <div class="container-fluid" id="menu">
     <div class="row">
-      <div class=" col-xs-12  col-sm-4 col-md-3 information ">
+      <div class=" col-xs-12  col-sm-4 col-md-3 col-lg-3 information ">
         <h3>NeoxCinema</h3>
         <ul class="information_menu">
           <li class="active" data-id="1" id="personaje">
@@ -123,7 +92,7 @@
             <a>
               <span class="glyphicon glyphicon-ok-sign"></span> COMICS</a>
           </li>
-     
+
           <li data-id="4" id="creators">
             <a>
               <span class="glyphicon glyphicon-ok-sign"></span> CREADORES</a>
@@ -142,7 +111,38 @@
           </li>
         </ul>
       </div>
+      <div class="container-fluid col-xs-10 col-md-7 col-xs-offset-2 col-lg-8">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
 
+          <div class="carousel-inner ">
+            <div class="item active">
+              <img src="../assets/images/one.jpg" alt="" style="width:100%;">
+            </div>
+
+            <div class="item">
+              <img src="../assets/images/newpan.jpg" alt="" style="width:100%;">
+            </div>
+
+            <div class="item">
+              <img src="../assets/images/three.jpg" alt="" style="width:100%,height:80%;">
+            </div>
+          </div>
+
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
 
     </div>
   </div>
