mejorando nav y seccion carousel

--- a/views/home.html
+++ b/views/home.html
@@ -28,18 +28,18 @@
         <b>NeoxCinema</b>
       </a>
     </div>
+    <ul id="menu-principal" class="nav navbar-nav">
+
+      <div class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" id="titleFld" class="form-control" placeholder="Buscar">
+        </div>
+        <button type="submit" id="searchBtn" class="btn btn-default">
+          <span class="glyphicon glyphicon-search"></span>BUSCAR</button>
+      </div>
+    </ul>
 
     <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <ul id="menu-principal" class="nav navbar-nav">
-
-        <div class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" id="titleFld" class="form-control" placeholder="Buscar">
-          </div>
-          <button type="submit" id="searchBtn" class="btn btn-default">
-            <span class="glyphicon glyphicon-search"></span>BUSCAR</button>
-        </div>
-      </ul>
 
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
@@ -81,7 +81,7 @@
   <!--menu-->
   <div class="container-fluid" id="menu">
     <div class="row">
-      <div class=" col-xs-12  col-sm-4 col-md-3 col-lg-3 information ">
+      <div class=" col-xs-12 col-lg-3 information ">
         <h3>NeoxCinema</h3>
         <ul class="information_menu">
           <li class="active" data-id="1" id="personaje">
@@ -111,7 +111,7 @@
           </li>
         </ul>
       </div>
-      <div class="container-fluid col-xs-10 col-md-7 col-xs-offset-2 col-lg-8">
+      <div class="col-lg-8">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
