--- a/css/principal.css
+++ b/css/principal.css
@@ -288,11 +288,13 @@ img.kami, img.jenny, img.jymma, img.flora{
   background: #C22D33;
 }
 
+.img_categories{
+  border: 1px solid rgb(5, 3, 4);
+}
 
 .center-all{
   margin-right: 20px;
 }
-=======
 
 /* Perfil */
 
