mejora ubicacion imagenes

--- a/views/home.html
+++ b/views/home.html
@@ -144,7 +144,7 @@
         </div>
       </div>
       <!-- aqui se muestra las fotos  -->
-      <div id="content" class="ed-container">
+      <div id="content" class="ed-container display col-md-12 container-fluid">
 
       </div>
 
