--- a/css/principal.css
+++ b/css/principal.css
@@ -17,136 +17,137 @@ body{
 
 }
 
-  .modal_movies img {
-      float: left;
-      width: 100px;
-      height: 100px;
-      margin: 10px;
-      }
+.modal_movies img {
+  float: left;
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+}
 
-  .modal_movies ul {
-      list-style-image: url('http://icons.iconarchive.com/icons/yusuke-kamiyamane/fugue/16/tick-small-icon.png');
-      margin-left: 1%;
-      float: left;
-      clear: right
-      }
+.modal_movies ul {
+  list-style-image: url('http://icons.iconarchive.com/icons/yusuke-kamiyamane/fugue/16/tick-small-icon.png');
+  margin-left: 1%;
+  float: left;
+  clear: right
+}
 
-  .modal_movies button {
-     margin-left: 1%;
-      float: right;
-      }
+.modal_movies button {
+  margin-left: 1%;
+  float: right;
+}
 
-  .modal_movies h1,h2,h3,h4,h5,h6 {
-      padding-bottom: 2%;
-      border-bottom: 2px dashed rgba(255, 255, 255, 0.41);
-      font-size:20px;
-      text-align : center;
-      text-transform: uppercase;
-      }
+.modal_movies h1,h2,h3,h4,h5,h6 {
+  padding-bottom: 2%;
+  border-bottom: 2px dashed rgba(255, 255, 255, 0.41);
+  font-size:20px;
+  text-align : center;
+  text-transform: uppercase;
+}
 
-  .modal_movies p {
-      text-align: justify;
-      }
+.modal_movies p {
+  text-align: justify;
+}
 
   /* estilos de menu*/
 
-    .information {
-       /* outline: 1px solid red; */
-        background: #2a3d46;
-        position: relative;
-        height: 400px;
-        margin-left: 12px;
-    }
+.information {
+/* outline: 1px solid red; */
+  background: #2a3d46;
+  position: relative;
+  height: 380px;
+  margin-left: 12px;
+  margin-top: 6%;
+}
 
-    .information .information_menu {
-        padding: 0;
-    }
-    .information .information_menu li {
-        list-style: none;
-        position: relative;
-    }
+.information .information_menu {
+  padding: 0;
+}
+.information .information_menu li {
+  list-style: none;
+  position: relative;
+}
 
-    .information .information_menu li a {
-        color: #FFF;
-        display: block;
-        padding: 13px 17px;
-        font-size: 1.4rem;
-        text-decoration: none;
-    }
+.information .information_menu li a {
+  color: #FFF;
+  display: block;
+  padding: 13px 17px;
+  font-size: 1.4rem;
+  text-decoration: none;
+}
 
-    .information .information_menu li a:hover{
-      background-color: red;
-      cursor: pointer;
-    }
+.information .information_menu li a:hover{
+  background-color: red;
+  cursor: pointer;
+}
 
-    .slideshow {
-      overflow: hidden;
-      width: 105%;
-    
-    }
+.slide {
+  overflow: hidden;
+  width: 105%;
+  height: 35%;
+}
 
-    #menu{
-      margin-top: 20px;
-    }
+#menu{
+  margin-top: 20px;
+}
 
-    #menu-principal  li a:hover{
-      background:#FF0000;
-      border: white;
-      color: #FFFFFF;
-      font-size: 15px;
-     }
+#menu-principal  li a:hover{
+  background:#FF0000;
+  border: white;
+  color: #FFFFFF;
+  font-size: 15px;
+}
 
-  .navbar-header a b{
-    background-color:#FF0000;
-    padding: 12%;
-    color:#FFFFFF;
-    font-size: 15px;
-  }
-  .dropdown{
-    font-size: 25px;
-   margin-left: -2;
-  }
+.navbar-header a b{
+  background-color:#FF0000;
+  padding: 12%;
+  color:#FFFFFF;
+  font-size: 15px;
+}
+.dropdown{
+  font-size: 25px;
+  margin-left: -2;
+}
 
-  .dropdown-menu li a:hover {
-    background:#FF0000;
-  }
+.dropdown-menu li a:hover {
+  background:#FF0000;
+}
 
-  #navbar{
-    background:#000000;
-  }
+#navbar{
+  background:#000000;
+}
 
-    /*estilo del div que muestra imagenes*/
+/*estilo del div que muestra imagenes*/
 
 .main-title {
-    text-align: center;
+  text-align: center;
 }
 
 .hero-img {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 .hero-img:hover .description {
-   top: 0;
+  top: 0;
 
 }
 .imgHover {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 
 }
 
 .description {
-    display: flex;
-    align-items: center;
-    color: white;
-    background: #333;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: -100%;
-    margin: 0;
-    padding: 1em;
+  display: flex;
+  align-items: center;
+  color: white;
+  background: #333;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  margin: 0;
+  padding: 1em;
 
 }
 
@@ -256,16 +257,7 @@ img.kami, img.jenny, img.jymma, img.flora{
   font-size: 1.2em;
 }
 
-.back{
-  margin-left: 0;
-  margin-top: 3%;
-  margin-bottom: 3%;
-}
-.backico{
-  font-size: 45px;
-  cursor:pointer;
-  color: white;
-}
+
 
 /*Estilos de imagenes de la data */
 
