--- a/views/home.html
+++ b/views/home.html
@@ -129,7 +129,7 @@
             </div>
 
             <div class="item">
-              <img src="../assets/images/three.jpg" alt="" style="width:100%,height:80%;">
+              <img src="../assets/images/three.jpg" alt="" style="width:100%">
             </div>
           </div>
 
