arrgelo vista  hero

--- a/views/home.html
+++ b/views/home.html
@@ -82,7 +82,7 @@
   <div class="container-fluid" id="menu">
     <div class="row">
       <div class=" col-xs-12 col-lg-3 information ">
-      
+
         <ul class="information_menu">
           <li class="active" data-id="1" id="personaje">
             <a>
@@ -142,9 +142,10 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-      </div>
-      <!-- aqui se muestra las fotos  -->
-      <div id="content" class="ed-container display col-md-12 container-fluid">
+        <!-- aqui se muestra las fotos  -->
+        <div id="content" class="ed-container display col-md-12 d-flex flex-column  container-fluid">
+
+        </div>
 
       </div>
 
