arreglo contenedor imagenes

--- a/views/home.html
+++ b/views/home.html
@@ -143,7 +143,7 @@
           </a>
         </div>
         <!-- aqui se muestra las fotos  -->
-        <div id="content" class="ed-container display col-md-12 d-flex flex-column  container-fluid">
+        <div id="content" class="ed-container display col-md-12 container-fluid">
 
         </div>
 
