--- a/views/home.html
+++ b/views/home.html
@@ -82,7 +82,7 @@
   <div class="container-fluid" id="menu">
     <div class="row">
       <div class=" col-xs-12 col-lg-3 information ">
-
+        <h3>NeoxCinema</h3>
         <ul class="information_menu">
           <li class="active" data-id="1" id="personaje">
             <a>
