mejorando contenedor imagenes

--- a/views/home.html
+++ b/views/home.html
@@ -150,10 +150,10 @@
           </a>
         </div>
         <!-- aqui se muestra las fotos  -->
-        <div id="content" class="ed-container display col-md-12 container-fluid">
+        <div id="content" class="ed-container justify-content-around col-md-12 container-fluid">
 
         </div>
-
+    
       </div>
 
     </div>
