--- a/css/principal.css
+++ b/css/principal.css
@@ -323,7 +323,8 @@ span.movietitle{
 }
 .ed-container{
   margin-top: 2%;
-  width: 80% !important;
+  width: 60% !important;
+  display: inline-block !important;
 }
 
 .ed_item{
