--- a/views/home.html
+++ b/views/home.html
@@ -150,7 +150,7 @@
           </a>
         </div>
         <!-- aqui se muestra las fotos  -->
-        <div id="content" class="ed-container align-items-start col-md-12 container-fluid">
+        <div id="content" class="ed-container justify-content-center col-md-12 container-fluid">
 
         </div>
     
