--- a/css/principal.css
+++ b/css/principal.css
@@ -324,6 +324,8 @@ span.movietitle{
 .ed-container{
   margin-top: 2%;
   width: 60% !important;
+  display: flex !important;
+  flex-wrap: wrap !important;
 }
 
 .ed_item{
