--- a/css/principal.css
+++ b/css/principal.css
@@ -321,9 +321,8 @@ span.movietitle{
 .box-movie{
   margin-bottom: 40px;
 }
-.ed-container{
+.container-api{
   margin-top: 2%;
-  width: 100vw !important;
 }
 
 .ed_item{
