mejorando otros contenedores

--- a/views/home.html
+++ b/views/home.html
@@ -150,7 +150,7 @@
           </a>
         </div>
         <!-- aqui se muestra las fotos  -->
-        <div id="content" class="container-api justify-content-around col-md-12 container-fluid">
+        <div id="content" class="container-api col-md-12 container-fluid">
 
         </div>
     
