--- a/views/home.html
+++ b/views/home.html
@@ -150,7 +150,10 @@
           </a>
         </div>
         <!-- aqui se muestra las fotos  -->
-        <div id="content" class="container-api col-md-12 container-fluid">
+        <div id="content" class="ed-container col-md-12 container-fluid">
+
+        </div>
+        <div id="content2" class="container-api col-md-12 container-fluid">
 
         </div>
     
